# web-tools

./: .gitignore  README.md  stack.yaml
app/helloworld/: LICENSE  helloworld.cabal  package.yaml
app/helloworld/app/: HelloWorld.hs  HelloWorldJson.hs  Links.hs
app/templates/: templates.cabal
app/templates/app/: HamletBasic.hs  HamletLogic.hs  HamletQuery.hs  HamletUrls.hs  I18n.hs  LuciusBasic.hs  TemplateFile.hs  template.lucius
app/widgets/: widgets.cabal
app/widgets/app/: WidgetBasic.hs  WidgetCombine.hs  WidgetLayout.hs  WidgetTemplates.hs
