cabal-version:  1.12
name:           helloworld
version:        0.0.0
description:    Please see the README on GitHub at <https://github.com/nbloomf/web-tools#readme>
homepage:       https://github.com/nbloomf/web-tools#readme
bug-reports:    https://github.com/nbloomf/web-tools/issues
author:         Nathan Bloomfield
maintainer:     nbloomf@gmail.com
copyright:      Automattic, Inc
license:        BSD3
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/nbloomf/web-tools

executable wt-00-helloworld
  main-is: HelloWorld.hs
  default-language: Haskell2010
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , yesod >=1.6.0.1

executable wt-00-links
  main-is: Links.hs
  default-language: Haskell2010
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , yesod >=1.6.0.1

executable wt-00-helloworld-json
  main-is: HelloWorldJson.hs
  default-language: Haskell2010
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , yesod >=1.6.0.1
