cabal-version:  1.12
name:           templates
version:        0.0.0
description:    Please see the README on GitHub at <https://github.com/nbloomf/web-tools#readme>
homepage:       https://github.com/nbloomf/web-tools#readme
bug-reports:    https://github.com/nbloomf/web-tools/issues
author:         Nathan Bloomfield
maintainer:     nbloomf@gmail.com
copyright:      Automattic, Inc
license:        BSD3
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/nbloomf/web-tools

executable wt-01-hamlet-basic
  main-is: HamletBasic.hs
  default-language: Haskell2010
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , blaze-html >=0.9.1.2
    , shakespeare >=2.0.24

executable wt-01-hamlet-urls
  main-is: HamletUrls.hs
  default-language: Haskell2010
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , text >=1.2.4.0
    , blaze-html >=0.9.1.2
    , shakespeare >=2.0.24

executable wt-01-hamlet-query
  main-is: HamletQuery.hs
  default-language: Haskell2010
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , text >=1.2.4.0
    , blaze-html >=0.9.1.2
    , blaze-builder >=0.4.1.0
    , http-types >=0.12.3
    , shakespeare >=2.0.24

executable wt-01-hamlet-logic
  main-is: HamletLogic.hs
  default-language: Haskell2010
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , text >=1.2.4.0
    , blaze-html >=0.9.1.2
    , blaze-builder >=0.4.1.0
    , http-types >=0.12.3
    , shakespeare >=2.0.24
